executable('Deskbar',
	'BarApp.cpp',
	'BarMenuBar.cpp',
	'BarMenuTitle.cpp',
	'BarView.cpp',
	'BarWindow.cpp',
	'BeMenu.cpp',
	'DeskBarUtils.cpp',
	'ExpandoMenuBar.cpp',
	'ResourceSet.cpp',
	'ShowHideMenuItem.cpp',
	'StatusView.cpp',
	'StatusViewShelf.cpp',
	'Switcher.cpp',
	'TeamMenu.cpp',
	'TeamMenuItem.cpp',
	'TimeView.cpp',
	'WindowMenu.cpp',
	'WindowMenuItem.cpp',
	cpp_args: [
		'-D__GCC__=4',
		'-DDB_ADDONS',
		'-D_IMPEXP_ROOT=',
		'-D_IMPEXP_BE=',
		'-D_IMPEXP_TRACKER=',
	],
	include_directories: [
		inc_shared,
		inc_tracker,
	],
	link_with: [
		lib_tracker,
	],
	dependencies: [
		dep_be,
	],
)
