inc_tracker = include_directories('.')

tracker_cpp_args = [
	'-DOPEN_TRACKER',
	'-D_IMPEXP_ROOT=',
	'-D_IMPEXP_BE=',
	'-D_IMPEXP_TRACKER=',
	'-DB_COMMON_ADDONS_DIRECTORY=((directory_which)2002)',
	'-DB_COMMON_FONTS_DIRECTORY=((directory_which)2004)',
	'-DB_COMMON_DEVELOP_DIRECTORY=((directory_which)2011)',
	'-DB_COMMON_SETTINGS_DIRECTORY=((directory_which)2010)',
	'-DB_COMMON_VAR_DIRECTORY=((directory_which)2015)',
]

lib_tracker = shared_library('tracker',
	'AboutBox.cpp',
	'AttributeStream.cpp',
	'AutoMounter.cpp',
	'AutoMounterSettings.cpp',
	'BackgroundImage.cpp',
	'Bitmaps.cpp',
	'ContainerWindow.cpp',
	'CountView.cpp',
	'DesktopPoseView.cpp',
	'DeskWindow.cpp',
	'DialogPane.cpp',
	'DirMenu.cpp',
	'EntryIterator.cpp',
	'FavoritesConfig.cpp',
	'FavoritesMenu.cpp',
	'FBCPadding.cpp',
	'FilePanel.cpp',
	'FilePanelPriv.cpp',
	'FilePermissionsView.cpp',
	'FindPanel.cpp',
	'FSClipboard.cpp',
	'FSUndoRedo.cpp',
	'FSUtils.cpp',
	'IconCache.cpp',
	'IconMenuItem.cpp',
	'InfoWindow.cpp',
	'MimeTypeList.cpp',
	'MiniMenuField.cpp',
	'Model.cpp',
	'MountMenu.cpp',
	'Navigator.cpp',
	'NavMenu.cpp',
	'NodePreloader.cpp',
	'NodeWalker.cpp',
	'OpenWithWindow.cpp',
	'OverrideAlert.cpp',
	'PendingNodeMonitorCache.cpp',
	'Pose.cpp',
	'PoseList.cpp',
	'PoseView.cpp',
	'PoseViewScripting.cpp',
	'QueryContainerWindow.cpp',
	'QueryPoseView.cpp',
	'RecentItems.cpp',
	'RegExp.cpp',
	'SelectionWindow.cpp',
	'Settings.cpp',
	'SettingsHandler.cpp',
	'SettingsViews.cpp',
	'SlowContextPopup.cpp',
	'SlowMenu.cpp',
	'StatusWindow.cpp',
	'TaskLoop.cpp',
	'TemplatesMenu.cpp',
	'Tests.cpp',
	'TextWidget.cpp',
	'Thread.cpp',
	'TitleView.cpp',
	'Tracker.cpp',
	'TrackerInitialState.cpp',
	'TrackerScripting.cpp',
	'TrackerSettings.cpp',
	'TrackerSettingsWindow.cpp',
	'TrackerString.cpp',
	'TrashWatcher.cpp',
	'Utilities.cpp',
	'ViewState.cpp',
	'VolumeWindow.cpp',
	'WidgetAttributeText.cpp',
	cpp_args: tracker_cpp_args,
	include_directories: [
		inc_shared,
	],
	dependencies: [
		dep_be,
		dep_translation,
	],
)

exe_Tracker = executable('Tracker',
	'main.cpp',
	cpp_args: tracker_cpp_args,
	include_directories: [
		inc_shared,
	],
	link_with: [
		lib_tracker,
	],
	dependencies: [
		dep_be,
	]
)
